Input Field for New Todo

--- a/index.html
+++ b/index.html
@@ -10,7 +10,8 @@
 
 <body>
   <h1>Todo App</h1>
-  <button>New Todo</button>
+  <button id="add-todo">New Todo</button>
+  <input id="new-todo-text" type="text" placeholder="Enter something to do">
   <script src="todo.js"></script>
 </body>
 
