Filter Todos by Text Input and Render to DOM

--- a/index.html
+++ b/index.html
@@ -12,6 +12,8 @@
   <h1>Todo App</h1>
   <button id="add-todo">New Todo</button>
   <input id="new-todo-text" type="text" placeholder="Enter something to do">
+  <input id="search-text" type="text" placeholder="Filter Todos">
+  <div id="todos"></div>
   <script src="todo.js"></script>
 </body>
 
