Input to add new todo

--- a/index.html
+++ b/index.html
@@ -10,10 +10,12 @@
 
 <body>
   <h1>Todo App</h1>
-  <button id="add-todo">New Todo</button>
-  <input id="new-todo-text" type="text" placeholder="Enter something to do">
   <input id="search-text" type="text" placeholder="Filter Todos">
   <div id="todos"></div>
+  <form id="new-todo">
+    <input type="text" placeholder="Something to do" name="text">
+    <button>Add Todo</button>
+  </form>
   <script src="todo.js"></script>
 </body>
 
