--- a/index.html
+++ b/index.html
@@ -11,6 +11,9 @@
 <body>
   <h1>Todo App</h1>
   <input id="search-text" type="text" placeholder="Filter Todos">
+  <label>
+    <input type="checkbox" id="hide-completed"> Hide Completed
+  </label>
   <div id="todos"></div>
   <form id="new-todo">
     <input type="text" placeholder="Something to do" name="text">
