--- a/index.html
+++ b/index.html
@@ -5,6 +5,7 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <meta http-equiv="X-UA-Compatible" content="ie=edge">
+  <link rel="stylesheet" href="styles/styles.css">
   <title>Todo App</title>
 </head>
 
@@ -19,9 +20,9 @@
     <input type="text" placeholder="Something to do" name="text">
     <button>Add Todo</button>
   </form>
-  <script src="uuidv4.js"></script>
-  <script src="todo-functions.js"></script>
-  <script src="todo.js"></script>
+  <script src="scripts/uuidv4.js"></script>
+  <script src="scripts/todo-functions.js"></script>
+  <script src="scripts/todo-app.js"></script>
 </body>
 
 </html>
